Adición de imagenes al proyecto

--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
     <main>
         <section>
             <article>
-
+                <h1>Soy un título muy grande</h1>
+                <h2>Soy un título grande</h2>
+                <h3>Soy un título mediano</h3>
+                <h4>Soy un título peque</h4>
+                <p>Soy un texto</p>
+                <a href="#">Soy un link</a>
             </article>
+            <section id="-- Etiquetas multimedia">
+              <figure>
+                <img src="./img/cat-play.png" alt="gatito jugando"/>
+                <figcaption>
+                  Descripción de la imagen del gatito bonito
+                </figcaption>
+              </figure>
+            </section>
         </section>
-        --- Listas
-        <ul>
-            <li>Soy una mnanzana</li>
-        </ul>
-        <ol></ol>
     </main>
     <footer>
 
