finalización clase videos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Soy un título mediano</h3>
                 <h4>Soy un título peque</h4>
                 <p>Soy un texto</p>
-                <a href="#">Soy un link</a>
+                <a href="./claseForm.html">Para ver la clase de forms haga click aquí</a>
             </article>
             <section id="-- Etiquetas multimedia">
               <figure>
@@ -30,6 +30,17 @@
                 </figcaption>
               </figure>
             </section>
+
+            <section id="-- Clase video">
+              <h1>Este es un video random</h1>
+             <video controls preload="auto">
+              <source src="./video/Video.mp4#t=8,12">
+              <source src="./video/Video.mp3#t=8,12">
+              <source src="./video/Video.view#t=8,12">
+             </video>
+
+            </section>
+            
         </section>
     </main>
     <footer>
