Mi primeros estilos css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h4>Soy un título peque</h4>
                 <p>Soy un texto</p>
                 <a href="./claseForm.html">Para ver la clase de forms haga click aquí</a>
+                <a href="./claseCSS.html">Para ver la clase de CSS haga click aquí</a>
             </article>
             <section id="-- Etiquetas multimedia">
               <figure>
